--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 					</span>
 					<div class="form-group">
 						<label for="exampleFormControlTextarea1"></label>
-						<textarea class="form-control" id="myTextArea" rows="2" style="background-color: #1d1f20;color: #ffc107;"></textarea>
+						<textarea class="form-control" id="myTextArea" rows="2" style="background-color: #8f201a;color: white;"></textarea>
 					</div>
-					<button type="button" class="btn btn-outline-success">Valider</button>
+					<button type="button" class="btn btn-outline">Valider</button>
 					<!-- 	MON BOUTON -->
 				</div>
 				<div class="col-12 col-sm-6 col-lg-3 infos"> <!-- 4eme colonne -->
