carousel foncgtionnel manque un peu de stylisation

--- a/offres-emplois.html
+++ b/offres-emplois.html
@@ -41,9 +41,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDI</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Bordeaux</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 5 minutes</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDI</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Bordeaux</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 5 minutes</p>
             </div>
           </article>
           <article>
@@ -56,9 +56,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDI</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Pessac</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 1 heure</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDI</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Pessac</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 1 heure</p>
             </div>
           </article>
           <article>
@@ -71,9 +71,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDD</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Talence</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 2 heures</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDD</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Talence</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 2 heures</p>
             </div>
           </article>
           <article>
@@ -86,9 +86,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDI</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Bordeaux</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 5 minutes</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDI</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Bordeaux</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 5 minutes</p>
             </div>
           </article>
           <article>
@@ -101,9 +101,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDI</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Pessac</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 1 heure</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDI</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Pessac</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 1 heure</p>
             </div>
           </article>
           <article>
@@ -116,9 +116,9 @@
               </figcaption>
             </figure>
             <div>
-              <p><i class="fas fa-briefcase mr-2"></i>CDD</p>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Talence</p>
-              <p><i class="far fa-clock mr-2"></i>Il y a 2 heures</p>
+              <p class="mb-0"><i class="fas fa-briefcase mr-2"></i>CDD</p>
+              <p class="mb-0"><i class="fas fa-map-marker-alt mr-2"></i>Talence</p>
+              <p class="mb-0"><i class="far fa-clock mr-2"></i>Il y a 2 heures</p>
             </div>
           </article>
         </div>
