--- a/offres-emplois.html
+++ b/offres-emplois.html
@@ -34,7 +34,7 @@
           <article>
             <h2 class="text-center">Développeur React (H/F)</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Wild Code School Bordeaux</h3>
                 <p>Ecole de formation Web</p>
@@ -49,7 +49,7 @@
           <article>
             <h2 class="text-center">Product Owner</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Ubisoft</h3>
                 <p>Développeur de logiciel</p>
@@ -64,7 +64,7 @@
           <article>
             <h2 class="text-center">Développeur Android (H/F)</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Meetic</h3>
                 <p>Site de rencontre</p>
@@ -79,7 +79,7 @@
           <article>
             <h2 class="text-center">Développeur React (H/F)</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Wild Code School Bordeaux</h3>
                 <p>Ecole de formation Web</p>
@@ -94,7 +94,7 @@
           <article>
             <h2 class="text-center">Product Owner</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Ubisoft</h3>
                 <p>Développeur de logiciel</p>
@@ -109,7 +109,7 @@
           <article>
             <h2 class="text-center">Développeur Android (H/F)</h2>
             <figure>
-              <img src="" alt="">
+              <img class="float-left mr-3" src="http://via.placeholder.com/75x75" alt="">
               <figcaption>
                 <h3>Meetic</h3>
                 <p>Site de rencontre</p>
