--- a/concept/concept.html
+++ b/concept/concept.html
@@ -12,28 +12,26 @@
 			<h2>Concept</h2>
 			<div class="presentation text-justify">
 				<div class="row">
-					<p> L’emploi est une jungle !
-						Un vrai parcours du combattant pour tous ceux qui n’en connaissent pas forcément les codes, tant il est difficile aujourd’hui de trouver la tribu qui nous correspond réellement. En 2018, chercher un job sur Internet est toujours un calvaire, les sites d’emploi étant peu intuitifs et les sites carrière des entreprises insuffisamment détaillés.
+					<p> Ici on aime maner du jabombon pendant qu'on travail !
+						Un vrai parcours du combattant pour tous ceux qui n’en connaissent pas forcément les codes, blablablablalblalbla. En 2018, chercher un job sur Internet est toujours un calvaire, les sites d’emploi étant peu intuitifs et les sites carrière des entreprises insuffisamment détaillés.
 
-					Nous sommes des trentenaires qui ont connu cette désillusion du marché de l’emploi. Pourquoi devrait elle continuer ? Notre mission chez Welcome to the Jungle est de changer tout cela, de vous offrir toutes les informations dont vous avez besoin pour découvrir les meilleures entreprises et postuler chez celles qui vous intéressent le plus. Chaque semaine, nous partons en chasse et sélectionnons pour vous les meilleures  </p>
+					Nous sommes des trentenaires qui ont connu cette blablablalblalbla to the Jungle est de changer tout cela, de vous offrir toutes les informations dont vous avez besoin pour découvrir blablalblalblachez celles qui vous intéressent le plus. Chaque semaine, nous blalblablalb ctionnons pour vous les meilleures  </p>
 				</div>
 			</div> <!-- End prensetation -->
 		</section>
 		<section class="Team concept text-justify">
-
 			<h2 class="text-center">Team</h2>
 			<div class="row">
 				<div class="col-12 col-md-4">
 					<h4 class="text-center">Ce qu'ils disent sur l'équie</h4>
 					<p>
-						Dans la jungle, on ne s’ennuie jamais. Ateliers d’équipes, journées d’inspiration, Jungle parties, Jungle breaks autour de personnalités marquantes... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
-
-						Et sinon, nos bureaux sont cools, une jungle où aucun kit de survie ne vous sera nécessaire, même les lundis matins !
+						A Wild Not You, on ne s’ennuie quasiment jamais. Il y a toujours un quête à déchiffrer ou des amis à aider.
+						Et sinon, le vendredi c'est apéro, d'habitude c'est Coralie et Julien qui finissent vomito !
 					</p>
 					<h4 class="text-center">Good to know</h4>
 					<p>
-						Dans la jungle, on ne s’ennuie jamais. Ateliers d’équipes, journées d’inspiration, Jungle parties, Jungle breaks autour de personnalités marquantes... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
-						Et sinon, nos bureaux sont cools, une jungle où aucun kit de survie ne vous sera nécessaire, même les lundis matins !
+						Tu pourras jouer à Mario Kart toute la journée si tu n'es pas motivé pour travailler. Ateliers d’équipes, journées d’inspiration, batailles de polochons, sont de rigueur... Les occasions de questionner et d'enrichir notre manière de travailler ne manquent pas !
+						Et sinon, on a qu'une isssue de secours, pas d'extincteur et peu d'aérations !
 					</p>
 				</div>
 				<div class="col-12 col-md-8">
